--- a/src/components/style/index.css
+++ b/src/components/style/index.css
@@ -11,3 +11,134 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.main {
+  display: block;
+  margin:20px auto;
+  border: solid 1px;
+  border-radius: 5px;
+  height: 100px;
+  background-color: dodgerblue;
+  text-align: center;
+}
+
+h1 {
+  margin-top: 30px;
+  font-size: 30px;
+}
+
+.input_activity {
+  margin-top: 20px;
+  background-color: seashell;
+  min-height: 30px;
+  border: solid 1px ;
+  border-radius: 5px;
+}
+
+.input{
+  display: flex;
+  justify-content: space-between;
+  margin: 10px auto;
+}
+
+#start {
+  width: 100px;
+}
+
+#finish {
+  width: 100px;
+}
+
+#distance {
+  width: 100px;
+}
+
+.select_activity {
+  width: 170px;
+}
+
+.result {
+  display: grid;
+  margin-top: 20px;
+  grid-template-columns: 600px 200px;
+  grid-template-rows: minmax(50px auto);
+  column-gap: 10px;
+  row-gap: 10px;
+  
+}
+
+.day_result {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  background-color: rgb(88, 219, 62);
+  max-height: 30px;
+  border: solid 1px ;
+  border-radius: 5px;
+  text-align: center;
+
+
+}
+
+.longest {
+  display: grid;
+  grid-template-columns: 200px ;
+  background-color: rgb(230, 133, 65);
+  min-height: 30px;
+  border: solid 1px ;
+  border-radius: 5px;
+}
+
+.longest_ride {
+  display: grid;
+  margin: 10px auto;
+  grid-template-columns: 200px ;
+  grid-template-rows: auto;
+}
+
+.longest_run {
+  display: grid;
+  margin: 10px auto;
+  grid-template-columns: 200px;
+  grid-template-rows: auto;
+}
+
+.longest_ride_text {
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+}
+
+.longest_run_text {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  gap: 20px;
+}
+
+.total {
+  grid-template-columns: 200px;
+  background-color: rgb(199, 54, 86);
+  min-height: 30px;
+  border: solid 1px ;
+  border-radius: 5px;
+  grid-column-start:  2;
+  grid-column-end: 3;
+}
+
+.total_ride_distance {
+  display: flex;
+  justify-content: space-between;
+}
+
+.total_run_distance {
+  display: flex;
+  justify-content: space-between;
+}
+
+
