--- a/src/components/style/index.css
+++ b/src/components/style/index.css
@@ -76,11 +76,12 @@ h1 {
   display: flex;
   justify-content: space-between;
   margin: 0;
-  background-color: rgb(88, 219, 62);
-  max-height: 30px;
+  background-color: rgb(104, 213, 233);
+  height: 30px;
   border: solid 1px ;
   border-radius: 5px;
   text-align: center;
+  box-shadow: 5px 3px  rgb(147, 149, 149) 
 
 
 }
