--- a/src/components/style/index.css
+++ b/src/components/style/index.css
@@ -96,6 +96,7 @@ h1 {
   border: solid 1px ;
   border-radius: 5px;
   box-shadow: 5px 3px  rgb(147, 149, 149);
+  width: 250px;
 }
 
 .longest_ride {
@@ -103,8 +104,9 @@ h1 {
   margin: 5 auto;
   grid-template-columns: 200px ;
   grid-template-rows: auto;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 500;
+  width: 250px;
 }
 h3 {
   padding-top: 5px;
@@ -115,9 +117,10 @@ h3 {
   display: block;
   margin: 5px auto;
   grid-template-columns: 200px;
-  grid-template-rows: auto;
-  font-size: 20px;
+  grid-template-rows: 100px;
+  font-size: 14px;
   font-weight: 500;
+  width: 250px;
 }
 
 .longest_ride_text {
